Fix spacing of controls in Safari

--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,7 @@
   font-family: inherit;
   border-radius: 0;
   padding: 8px;
+  margin: 0;
 }
 
 .controls li + li .controls__button {
